# simulation-of-CBIs-and-BGWIs

./: .env  .gitignore  LICENSE  README.md  bells_polynomial.py  bgw.py  cb.py  cbi.py  fejer_de_la_vallee_poussin_random_variable.py  immigration_const_rv.py  immigration_exp_rv.py  immigration_rv.py  linnik.py  main.py  polya_transformed_xi.py  pytest.ini  random_variable.py  reproduction_const_rv.py  reproduction_exp_rv.py  reproduction_rv.py  stable_random_variable.py  xi.py
branching_processes_simulation/: pyproject.toml  requirements.txt
branching_processes_simulation/run/: run_simulation.py
branching_processes_simulation/src/: main.py
branching_processes_simulation/tests/: test_genealogy.py  test_import.py  test_laplace_transform.py  test_linnik.py  test_positive_stable.py  test_positive_stable_charac.py  test_positive_stable_laplace.py  test_sample_A_cdf.py  test_sample_cb.py  test_sample_cb_in_two.py  test_sample_cbi.py  test_sample_cbi_in_two.py  test_sample_conditioned_cb.py  test_sample_linnik.py  test_sample_positive_stable.py  test_sample_positive_stable_charac.py  test_sample_positive_stable_laplace.py  test_sample_stable.py  test_sample_symm_stable.py  test_sample_tau.py  test_sample_tau_cdf.py  test_sample_tau_mcmc.py  test_sample_unsizebiased_cdf_sampling.py  test_sample_unsizebiased_mcmc_sampling.py  test_sample_vau_cdf.py  test_sample_zero_truncated_poisson.py  test_sampling_of_cb.py  test_sampling_of_fvp.py  test_sampling_of_pos_stable.py  test_sampling_of_stable.py  test_sampling_of_sym_stable.py  test_sampling_of_tau.py  test_test2.py  (+6 more)
(+88 files in other folders)
