[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "branching_processes_simulation_package"
version = "0.1.4"
authors = [
  { name="Ben Povar", email="ben.povar@gmail.com" },
]
description = "Simulation of random variables related to branching processes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib",
  "numpy", 
  "typing",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/qiqvo/simulation-of-CBIs-and-BGWIs"
Issues = "https://github.com/qiqvo/simulation-of-CBIs-and-BGWIs/issues"